--- a/blog.ejs
+++ b/blog.ejs
@@ -16,7 +16,7 @@
     <div class="sidebar kev-u-1 kev-u-md-1-4">
         <div class="header">
             <h1 class="brand-title">Kevin Isom</h1>
-            <h2 class="brand-tagline">I'm a software developer living in Auckland, New Zealand. Originally from a sleepy little Southern Town in the USA, I moved to New Zealand in the last century and have become a husband and father.</h2>
+            <h2 class="brand-tagline">Software Engineer with a front end focus</h2>
 
             <nav class="nav">
                 <ul class="nav-list">
@@ -45,7 +45,18 @@
                         <h2 class="post-title"><%= post.title %></h2>
 
                         <p class="post-meta">
-                            By <a href="#" class="post-author">Kevin Isom</a> under <a class="post-category post-category-design" href="#">CSS</a> <a class="post-category post-category-pure" href="#">Pure</a>
+                            By <a href="#" class="post-author">Kevin Isom</a> under <%
+                            if (post.tags.length === 0) {
+                                %>
+                                <a class="post-category post-category-design" href="#">general</a> 
+                                <%
+                            }
+                            for (var i = 0; i < post.tags.length; i++) {
+                            %>
+                                <a class="post-category post-category-design" href="#"><%= post.tags[i] %></a>
+                            <%
+                            }
+                            %>
                         </p>
                     </header>
 
