--- a/css/style.css
+++ b/css/style.css
@@ -1884,7 +1884,7 @@ a.kev-button-primary {
     .content-subhead i {
         margin-right: 7px;
     }
-.content-subhead h3 a {
+.content-subhead a {
     color: #1f8dd6!important;
     text-decoration: none;
 }
